--- a/libevent/sample/Makefile
+++ b/libevent/sample/Makefile
@@ -135,12 +135,12 @@ am__can_run_installinfo = \
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /root/libevent-2.0.21-stable/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /root/mutilate/libevent/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
 AR = ar
-AUTOCONF = ${SHELL} /root/libevent-2.0.21-stable/missing --run autoconf
-AUTOHEADER = ${SHELL} /root/libevent-2.0.21-stable/missing --run autoheader
-AUTOMAKE = ${SHELL} /root/libevent-2.0.21-stable/missing --run automake-1.11
+AUTOCONF = ${SHELL} /root/mutilate/libevent/missing --run autoconf
+AUTOHEADER = ${SHELL} /root/mutilate/libevent/missing --run autoheader
+AUTOMAKE = ${SHELL} /root/mutilate/libevent/missing --run automake-1.11
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -177,7 +177,7 @@ LIBTOOL_DEPS = ./ltmain.sh
 LIPO = 
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /root/libevent-2.0.21-stable/missing --run makeinfo
+MAKEINFO = ${SHELL} /root/mutilate/libevent/missing --run makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
 NM = /usr/bin/nm -B
@@ -206,10 +206,10 @@ SHELL = /bin/sh
 STRIP = strip
 VERSION = 2.0.21-stable
 ZLIB_LIBS = 
-abs_builddir = /root/libevent-2.0.21-stable/sample
-abs_srcdir = /root/libevent-2.0.21-stable/sample
-abs_top_builddir = /root/libevent-2.0.21-stable
-abs_top_srcdir = /root/libevent-2.0.21-stable
+abs_builddir = /root/mutilate/libevent/sample
+abs_srcdir = /root/mutilate/libevent/sample
+abs_top_builddir = /root/mutilate/libevent
+abs_top_srcdir = /root/mutilate/libevent
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
@@ -239,7 +239,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /root/libevent-2.0.21-stable/install-sh
+install_sh = ${SHELL} /root/mutilate/libevent/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
